qmsystem2 (0.0.8) unstable; urgency=low

  * Add testGetBatteryCondition
	
 -- Yang Yang <ext-yang.25.yang@nokia.com>  Mon, 22 Nov 2010 13:50:19 +0200

qmsystem2 (0.0.7) unstable; urgency=low

  [Matias Muhonen]
  * Improve bluetooth headset detection
  * Fixes: NB#196881 - volume cannot be minimized with WH701 sometimes

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 15 Nov 2010 14:07:21 +0200

qmsystem2 (0.0.6) unstable; urgency=low

  [Matias Muhonen]
  * Fixes: NB#202890 - qmsystem QmTime test cases need to be enabled

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 12 Nov 2010 09:30:06 +0200

qmsystem2 (0.0.5) unstable; urgency=low

  [Raimo Vuonnala]	
  * Commented that QmKeys should be destructed when app does not expect key pressures

  [Matias Muhonen]
  * Fixes: NB#201671 - COREWEB: /usr/bin/sysuid 'isSignalConnected QMetaObject::activate Maemo::QmTime::timeOrSettingsChanged Maemo::QmTimePrivate::gconfkey_changed notify_listeners_callback'
  * Fixes: NB#202311 - qmsystem2 tries to connect to slots that don't exist
  * Fixes: NB#203249 - battery-test failed
  * Fix lc_timeformat24h handling in getTimeFormat (and don't leak memory)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 09 Nov 2010 11:26:49 +0200

qmsystem2 (0.0.4) unstable; urgency=low

  [Yang Yang]
  * Fixes: NB#201690 - qmsystem-api-fast-tests take 12 mins for execution
  * Add QmKeys::UnknownKey
  * Added a method for querying battery condition
	
 -- Matti Halme <matti.halme@nokia.com>  Tue, 02 Nov 2010 10:56:12 +0200

qmsystem2 (0.0.3) unstable; urgency=low

  * Fixes: NB#201532 - /usr/lib/pkgconfig/qmsystem2.pc lists incorrect includepath
	
 -- Yang Yang <ext-yang.25.yang@nokia.com>  Mon, 1 Nov 2010 12:50:19 +0300

qmsystem2 (0.0.2) unstable; urgency=low

  * Fixes: NB#198843 - offline mode button state is not preserved after reboot.
  * Fixes: NB#199370 - Copyright tag not defined in qmsystem
	